--- a/main/backend/package.json
+++ b/main/backend/package.json
@@ -20,7 +20,8 @@
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.8.0"
+    "mysql2": "^3.8.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
