--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.0",
+    "sonner": "^1.4.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
