[DONE] image upload function

--- a/main/backend/.env.sample
+++ b/main/backend/.env.sample
@@ -5,3 +5,7 @@ dbPass=database password
 
 secretKey=the secret password
 port=port number
+
+imageCloudName=your cloud
+imageUploadApi=your image upload api
+imageCloudSecret=your cloud secret
