--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -18,6 +18,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.0",
     "sonner": "^1.4.0",
+    "sweetalert2": "^11.10.6",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
