--- a/main/backend/package.json
+++ b/main/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
@@ -20,6 +21,7 @@
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "form-data": "^4.0.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
