--- a/main/backend/package.json
+++ b/main/backend/package.json
@@ -26,6 +26,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.8.0",
+    "nodemailer": "^6.9.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
