--- a/main/backend/.env.sample
+++ b/main/backend/.env.sample
@@ -9,3 +9,7 @@ port=port number
 imageCloudName=your cloud
 imageUploadApi=your image upload api
 imageCloudSecret=your cloud secret
+
+mailUrl=mail url
+mailPass=mail pass
+mail=mail
