--- a/main/frontend/package.json
+++ b/main/frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.0",
+    "react-star-ratings": "^2.3.0",
     "sonner": "^1.4.0",
     "sweetalert2": "^11.10.6",
     "zustand": "^4.5.0"
