--- a/main/admin/package.json
+++ b/main/admin/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.4",
     "sonner": "^1.4.41",
     "sweetalert2": "^11.10.7",
     "zustand": "^4.5.2"
